# introduction-to-zephyr

workspace/apps/01_blink/: CMakeLists.txt
workspace/apps/01_blink/01_blink/src/: main.c
workspace/apps/01_blink/lib/blink/: CMakeLists.txt
workspace/apps/01_blink/lib/blink/include/: blink.h
workspace/apps/01_blink/lib/blink/src/: blink.c
workspace/apps/02_cmake/include/: my_lib.h
workspace/apps/02_cmake/src/: main.c  my_lib.c
workspace/apps/03_kconfig/: CMakeLists.txt
workspace/apps/03_kconfig/boards/: esp32s3_devkitm.conf
workspace/apps/03_kconfig/src/: main.c
workspace/apps/04_button/: CMakeLists.txt
workspace/apps/04_button/04_button/: CMakeLists.txt
workspace/apps/04_button/04_button/src/: main.c
workspace/apps/04_button/boards/: esp32s3_devkitm.overlay
workspace/apps/04_button/src/: main.c
workspace/modules/button/drivers/: CMakeLists.txt
workspace/modules/button/drivers/button/: CMakeLists.txt  Kconfig
